[3613] pagination and filtering prototype
